[project]
name = "bonhamcode"
version = "1.0.0"
authors = [{name = "Paradoxdruid", email = "bonham@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
]
dependencies = [
    "dash",
    "dash_bootstrap_components",
    "numpy",
    "pandas",
    "scipy",
    "plotly"
]
urls = {homepage = "https://bonhamcode.com"}

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
files = "*.py"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
